src/objects/Outbound_Calling_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>Auto_Close_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Close Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>DD Cancellation</fullName>
                    <default>true</default>
                    <label>DD Cancellation</label>
                </value>
                <value>
                    <fullName>DD Winback</fullName>
                </value>
                <value>
                    <fullName>Outbound Calling (DD Cancellation)</fullName>
                </value>
                <value>
                    <fullName>Outbound Calling (DD Winback)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Outbound Calling Configuration</label>
    <pluralLabel>Outbound Calling Configuration</pluralLabel>
</CustomObject>